--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="main">HELLO {{name}}</div>
+    <div id="main">
+      HELLO {{name}}
+
+      <word-cloud
+        :data="defaultWords"
+        nameKey="name"
+        valueKey="value"
+        :color="myColors"
+        :showTooltip="true"
+        :wordClick="wordClickHandler"
+      >
+      </word-cloud>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-wordcloud@1.1.1/dist/word-cloud.js"></script>
     <script src="/script.js"></script>
   </body>
 </html>
